Added how much I am enjoying this assignment

--- a/dhumble.html
+++ b/dhumble.html
@@ -7,5 +7,7 @@
 	<body>
 		Hello world!
 		Dylan Humble
+		This assignment is very fun to learn along with this class!
+		Colbert has been, by far, one of my favorite professors at this university.
 	</body>
 </html>
