--- a/dhumble.html
+++ b/dhumble.html
@@ -4,13 +4,14 @@
 		<meta charset="utf-8">
 		<title> Git Test Page </title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		<a href="https://www.google.com"> Google </a>
+		<h1>BAIS:3300-Software Design</h1>
 	</head>
 	<body>
-		Hello world!
-		Dylan Humble
-		This assignment is very fun to learn along with this class!
-		Colbert has been, by far, one of my favorite professors at this university.
-		Hello World!
+		<a href="https://www.google.com"> Google </a>
+		<br>Hello world!
+		<br>Dylan Humble
+		<br>This assignment is very fun to learn along with this class!
+		<br>Colbert has been, by far, one of my favorite professors at this university.
+		<br>Hello World!
 	</body>
 </html>
